# Persistence-Hunter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASE_NOTES_v0.1.md  api_server.py  apt_signatures.json  check_db.py  check_signatures.py  diagnose_reghunt.py  fix_base.py  fix_db.py  inject_baseline.py  main.rs  reghunt-sysmon.xml  reghunt.db  registry_collector.py  requirements.txt  scan_summary.json  scan_summary.py  signature_results.json  stop  tauri.conf.json  test_api.py  test_collectors.py  test_persistence_commands.ps1  test_sysmon.py  threat_scorer.py
api/: dependencies.py  main.py  models.py  scan_worker.py
api/routes/: alerts.py  baseline.py  chains.py  enrichment.py  entries.py  exclusions.py  export.py  scan.py  scores.py  search.py  signatures.py  stats.py  summary.py
collector/: __init__.py  base_collector.py  registry_collector.py  service_collector.py  task_collector.py
core/: alert_translator.py  exclusion_engine.py  threat_scorer.py
enrichment/: __init__.py  baseline.py  enrichment_manager.py  file_enricher.py  local.py  threat_intel.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/features/: EnrichmentPanel.jsx  (+6 more)
frontend/src/pages/: Alerts.jsx  Baseline.jsx  ConsumerDashboard.jsx  Dashboard.jsx  Entries.jsx  EntryDetail.jsx  Search.jsx
monitors/: correlator.py  etw_monitor.py
rules/: apt_signatures.json  behavior_rules.json
service/: service_wrapper.py  toast.py  tray.py
tools/: ps_decode.py  scan_summary.py
(+9 files in other folders)
