[package]
name    = "persistence-hunter"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri  = { version = "1", features = [
  "system-tray",
  "updater",
  "window-all",
  "http-all",
  "shell-open",
  "icon-png",
] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
